handover/prom/agent-1/deploy/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress
  namespace: uamc-agent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: ingress
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              k8s-agent-access: "true"
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: agent-service
      ports:
        - protocol: TCP
          port: 8081

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress
  namespace: uamc-agent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: egress
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: agent-service
      ports:
        - protocol: TCP
          port: 8081
    - ports:
        - protocol: TCP
          port: 9092

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: agent-service
  namespace: uamc-agent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: agent-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: ingress
      ports:
        - protocol: TCP
          port: 8081
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: egress
      ports:
        - protocol: TCP
          port: 8081
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8081
  egress:
    - ports:
        - protocol: TCP
          port: 443
    - ports:
        - protocol: TCP
          port: 9092
    - ports:
        - protocol: TCP
          port: 9010
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: logs-node-agent
      ports:
        - protocol: TCP
          port: 8083
